# geo-analytics-platform

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  ingest.yml  pipeline.yml  transform.yml
dbt/: dbt_project.yml  profiles.yml  profiles.yml.example
dbt/macros/: compat_datediff.sql  compat_mode.sql  generate_schema_name.sql  normalize_city_name.sql
dbt/tests/: assert_stg_olist_customers_volume.sql  assert_stg_olist_order_items_volume.sql  assert_stg_olist_orders_volume.sql
docs/: backlog.md  conventions.md  data_quality.md  fontes_covariaveis_municipais.md  geo_lift_scope.md  roadmap.md  session_log.md  sources.md
docs/adr/: ADR-001-bigquery-warehouse.md  ADR-002-cloud-run-scheduler.md  ADR-003-parquet-raw-layer.md  ADR-004-airflow-supersedida.md  ADR-005-fontes-negocio-plugaveis.md  ADR-006-makefile-orquestracao-local.md  ADR-007-dbt-duckdb-local.md  ADR-008-staging-quality-policy.md  ADR-009-github-actions-ingestao-remota.md  ADR-010-particao-ingestion-date.md  ADR-011-olist-event-driven-ingest.md
docs/normative/: conventions.md  data_quality.md
docs/understanding/: bcb_pix.md  fase_4b.md  fase_4c.md  fontes_covariaveis_municipais.md  ibge.md  mart_geo_analytics.md  olist.md  streamlit.md
docs/vision/: geo_lift_scope.md
exploration/: bcb_exploration.ipynb  dbt_setup.md  ibge_exploration.ipynb  olist_exploration.ipynb  raw_exploration.ipynb  testes_unitarios_conceitos.md
infra/: Makefile.setup  Makefile.setup.example  setup_external_tables.sh
ingestion/src/: bcb_pix.py  (+5 more)
streamlit/: app.py
(+52 files in other folders)
