[project]
name = "geo-analytics-platform"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "dbt-duckdb>=1.10.1",
    "jupyter>=1.1.1",
    "kagglehub>=1.0.1",
    "pandas>=3.0.3",
    "plotly>=6.8.0",
    "pyarrow>=24.0.0",
    "pydantic>=2.13.4",
    "requests>=2.34.2",
    "scikit-learn>=1.9.0",
    "structlog>=25.5.0",
    "tenacity>=9.1.4",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
